--- a/SpiralPay/Podfile
+++ b/SpiralPay/Podfile
@@ -17,6 +17,8 @@ target 'SpiralPay' do
 #  pod 'FBSDKLoginKit'
   pod 'IQKeyboardManagerSwift', '5.0.0'
 
+    pod 'Crashlytics'
+
   target 'SpiralPayTests' do
     inherit! :search_paths
     # Pods for testing
