--- a/SpiralPay/SpiralPay/Info.plist
+++ b/SpiralPay/SpiralPay/Info.plist
@@ -34,6 +34,8 @@
 	</dict>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Gain acceess to camera for scanning</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
