--- a/SpiralPay/SpiralPay/Info.plist
+++ b/SpiralPay/SpiralPay/Info.plist
@@ -35,7 +35,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>Gain acceess to camera for scanning</string>
+	<string>Acceess to camera for scanning</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
