Mobile checkout SPI-26

--- a/SpiralPay/SpiralPay/Info.plist
+++ b/SpiralPay/SpiralPay/Info.plist
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Associated Domains</key>
+	<array>
+		<string>applinks:get-spiralpay.envisionworld.co/*</string>
+		<string>applinks:get-spiralpay.envisionworld.co</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
